@@ -1,6 +1,6 @@
 <!--
   ~ HeadsUp Agile
-  ~ Copyright 2009-2012 Heads Up Development Ltd.
+  ~ Copyright 2009-2013 Heads Up Development Ltd.
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Affero General Public License as
@@ -19,7 +19,7 @@
 <html>
   <body>
     <wicket:extend>
-      <div wicket:id="content">
+      <div wicket:id="content" id="doc-content">
         content
       </div>
       <div wicket:id="notfound" class="error">
