@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
   ~ HeadsUp Agile
-  ~ Copyright 2009-2012 Heads Up Development Ltd.
+  ~ Copyright 2009-2013 Heads Up Development Ltd.
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Affero General Public License as
@@ -124,7 +124,7 @@
             <div id="projectmenu-footer">&nbsp;</div>
           </div>
           <div id="content">
-            <h2 wicket:id="title">title</h2>
+            <h1 wicket:id="title">title</h1>
             <div wicket:id="messages"></div>
             <wicket:child />
           </div>
