@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
     white-space: nowrap;
 }
 
-h2 span.summary {
+h1 span.summary {
     white-space: normal;
 }
 
